@@ -1,12 +1,12 @@
 ##  Process this file with automake to create Makefile.in
 ##
-## $Id: $
+## $Id$
 ##
 ## This file was generated by MPC.  Any changes made directly to
 ## this file will be lost the next time it is generated.
 ##
 ## MPC Command:
-## /tao_builds/chad/ocitao/ACE_wrappers/build/linux/bin/mwc.pl -include /home/elliottc/current/MPC/config -include /home/elliottc/current/MPC/templates -include config -type automake wide_coverage.mwc
+## /tao_builds/chad/doc/ACE_wrappers/build/linux/bin/mwc.pl -include /home/elliottc/current/MPC/config -include /home/elliottc/current/MPC/templates -include config -type automake wide_coverage.mwc
 
 
 
@@ -84,7 +84,7 @@ all-stamp: $(srcdir)/all.mondo ../mondo/mondo.pl ../mondo/modules/ReaderGen.pm
 noinst_LTLIBRARIES = libsource_lib.la
 
 libsource_lib_la_CPPFLAGS = \
-  -I$(srcdir)/. \
+  -I. \
   -D__NO_STATIC_FLAGS_AVAILABLE__
 
 libsource_lib_la_SOURCES = \
@@ -117,7 +117,7 @@ Foolish/foolish.txt: $(srcdir)/Foolish/foolish.simple
 noinst_PROGRAMS = main_test
 
 main_test_CPPFLAGS = \
-  -I$(srcdir)/. \
+  -I. \
   -DMACRO_TEST
 
 main_test_SOURCES = \
